Crash on sculpting with 'Curve' Stroke Method #70443

Closed
opened 2019-10-02 14:10:27 +02:00 by Krzysztof Kowalczyk · 6 comments

System Information
Operating system: Windows-7-6.1.7601-SP1 64 Bits
Graphics card: Quadro K2100M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 412.16

Blender Version
Broken: version: 2.81 (sub 12), branch: master, commit date: 2019-10-01 19:51, hash: 3b23685c7d
Worked: (optional)

Short description of error
Blender crashes right after trying to sculpt using 'Curve' as Stroke Method.

Exact steps for others to reproduce the error

  1. Go to Sculpt Mode;
  2. Change Stroke Method to Curve;
  3. Add new paint curve (it's not necessary to actually draw it);
  4. Click Draw Curve or press Enter - Blender crashes;
**System Information** Operating system: Windows-7-6.1.7601-SP1 64 Bits Graphics card: Quadro K2100M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 412.16 **Blender Version** Broken: version: 2.81 (sub 12), branch: master, commit date: 2019-10-01 19:51, hash: `3b23685c7d` Worked: (optional) **Short description of error** Blender crashes right after trying to sculpt using 'Curve' as Stroke Method. **Exact steps for others to reproduce the error** 1. Go to Sculpt Mode; 2. Change Stroke Method to Curve; 3. Add new paint curve (it's not necessary to actually draw it); 4. Click Draw Curve or press Enter - Blender crashes;

Added subscriber: @KrzysztofKowalczyk

Added subscriber: @KrzysztofKowalczyk
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Confirmed, checking...

Confirmed, checking...

This issue was referenced by 31473070b3

This issue was referenced by 31473070b3cfd28db1eccf39630edd87a69687f3
Member

Caused by c31a849a14.

Crashes here where stroke is NULL

1  paint_stroke_free                         paint_stroke.c    913  0x3cdd962 
2  sculpt_brush_stroke_invoke                sculpt.c          7082 0x3d1bfb1 
3  wm_operator_invoke                        wm_event_system.c 1441 0x3365d35 
4  wm_operator_call_internal                 wm_event_system.c 1688 0x3366638 
5  WM_operator_name_call_ptr                 wm_event_system.c 1702 0x33666f5 
6  WM_operator_name_call                     wm_event_system.c 1708 0x3366749 
7  paintcurve_draw_exec                      paint_curve.c     710  0x3d38a2c 
8  wm_operator_invoke                        wm_event_system.c 1453 0x3365e52 

Marking High prio since it is a regression.
Fix incoming...

Caused by c31a849a14. Crashes here where stroke is NULL ``` 1 paint_stroke_free paint_stroke.c 913 0x3cdd962 2 sculpt_brush_stroke_invoke sculpt.c 7082 0x3d1bfb1 3 wm_operator_invoke wm_event_system.c 1441 0x3365d35 4 wm_operator_call_internal wm_event_system.c 1688 0x3366638 5 WM_operator_name_call_ptr wm_event_system.c 1702 0x33666f5 6 WM_operator_name_call wm_event_system.c 1708 0x3366749 7 paintcurve_draw_exec paint_curve.c 710 0x3d38a2c 8 wm_operator_invoke wm_event_system.c 1453 0x3365e52 ``` Marking High prio since it is a regression. Fix incoming...
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Philipp Oeser self-assigned this 2019-10-02 15:00:28 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#70443
No description provided.