Fix T70443: Crash on sculpting with 'Curve' Stroke Method

Caused by rBc31a849a1474.

Reviewed By: brecht

Maniphest Tasks: T70443

Differential Revision: https://developer.blender.org/D5970